Add packaged configuration defaults and paper doll battle visuals
- Add assets/configuration.properties as packaged gameplay defaults
- Load packaged config before applying local data/configuration.properties overrides
- Show composed player paper doll as the ally sprite in battle
- Tint paper doll gear overlays by equipped material
- Add Copper as its own gear material before Bronze
- Update copper smithing recipes and authored copper items to use Copper material